syntax = "proto3";

package event;

option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start = 3;
  google.protobuf.Timestamp end = 4;
  optional string description = 5;
  string user_id = 6;
  optional google.protobuf.Duration notify_time = 7;
}

message DeleteEventRequest {
  string id = 1;
}

message ListByInterval {
  google.protobuf.Timestamp date = 1;
}

message EventDataResponse {
  Event event = 1;
}

message EventDeleteResponse {}

message ListByDateResponse {
  repeated Event events = 1;
}

service EventService {
  rpc Create(Event) returns (EventDataResponse);
  rpc Update(Event) returns (EventDataResponse);
  rpc Delete(DeleteEventRequest) returns (EventDeleteResponse);

  rpc ListOnDate(ListByInterval) returns (ListByDateResponse);
  rpc ListOnWeek(ListByInterval) returns (ListByDateResponse);
  rpc ListOnMonth(ListByInterval) returns (ListByDateResponse);
}
